--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1254.0",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.2",
     "nodemailer": "^6.8.0"
