--- a/serverless.yml
+++ b/serverless.yml
@@ -99,6 +99,13 @@ functions:
           path: /users/login
           method: post
           cors: true
+  getUser:
+    handler: src/handlers/UserHandler.getUser
+    events:
+      - httpApi:
+          path: /users/getuser
+          method: get
+          cors: true
 
 plugins:
   - serverless-dotenv-plugin
